# llm-governance-dashboard

./: .gitattributes  .gitignore  Cargo.toml  README.md
.claude-flow/metrics/: system-metrics.json
.github/workflows/: publish-npm.yml
frontend/: TYPESCRIPT_ARCHITECTURE.md  package-lock.json  package.json
frontend/src/lib/services/: auth-service.ts  index.ts  organization-service.ts  sdk-client.ts
frontend/src/lib/stores/: auth.ts  organization.ts
scripts/: publish-npm.sh
